--- a/lab10c/src/pages/agency.html
+++ b/lab10c/src/pages/agency.html
@@ -40,7 +40,7 @@
     <div class="row">
       <div class="medium-4 columns">
         <h3>New Project</h3>
-        <p>To create a new Foundation project, I navigated to my desired directory and ran: <code>foundation new mywebsite</code>, which generated the project structure and necessary files. I then used <code>foundation watch</code> to start a local development server, which allowed me to see my changes live as I developed the web page.</p>
+        <p>To create a new Foundation project, I navigated to my desired directory and ran: <code>foundation new mywebsite</code>, which generated the project structure and necessary files. I called this folder lab10c. I then used <code>foundation watch</code> to start a local development server, which allowed me to see my changes live as I developed the web page.</p>
       </div>
       <div class="medium-4 columns">
         <h3>How the Web Page Was Built</h3>
