--- a/lab10c/src/pages/agency.html
+++ b/lab10c/src/pages/agency.html
@@ -8,13 +8,18 @@
   </head>
   <body>
 
-    <!-- Start Top Bar -->
+       <!-- Start Top Bar -->
     <div class="top-bar">
       <div class="top-bar-left">
         <ul class="menu">
           <li class="menu-text">Michael Macieri's Agency</li>
         </ul>
-     </div>
+      </div>
+      <div class="top-bar-right">
+        <ul class="menu">
+        </ul>
+      </div>
+    </div>
     <!-- End Top Bar -->
 
     <div class="callout large">
